Tue Nov 11 23:02:27 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* man/ruby.1 (RUBYOPT): wrote which option can appear.
	  (--yydebug): wrote "do not use".
	  (--dump): wrote "do not use".

Tue Nov 11 21:22:28 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/uri/generic.rb (URI::Generic#check_path): REL_PATH should a
	  symbol.  [ruby-core:19805]

Tue Nov 11 20:49:29 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* configure.in: fix SEGV on Mac OS X 10.5.3 with pthread.
	  a patch from Wataru Kimura in Bug #193 [ruby-core:17333].

Tue Nov 11 20:39:27 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb (inspect): reverted the previous change.

Tue Nov 11 17:35:25 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_accept): secure fd before accept because if
	  error causes in securing, cannot restore the state of accepted
	  socket.
	  fixed [ruby-core:19728]

Tue Nov 11 14:40:40 2008  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/test_transcode.rb: unnecessary setup method
	  (setup_really_needed?) removed

Tue Nov 11 14:25:25 2008  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/trans/single_byte.trans, macgreek-tbl.rb, macroman-tbl.rb,
	  macromania-tbl.rb, macturkish-tbl.rb, macukraine-tbl.rb,
	  ibm437-tbl.rb, ibm852-tbl.rb, ibm855-tbl.rb, ibm857-tbl.rb,
	  ibm860-tbl.rb, ibm861-tbl.rb, ibm862-tbl.rb, ibm863-tbl.rb,
	  ibm865-tbl.rb, ibm866-tbl.rb, ibm869-tbl.rb, ibm775-tbl.rb:
	  new single-byte transcodings (from Yoshihiro Kambayashi)

	* test/ruby/test_transcode.rb: added tests for the above
	  (from Yoshihiro Kambayashi)

Tue Nov 11 13:20:23 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_to_r): moved from
	  bigdecimal/util, converted into C.  [ruby-dev:36805]

Tue Nov 11 07:55:57 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb (inspect): changed the format.

Mon Nov 10 17:34:50 2008  Akinori MUSHA  <knu@iDaemons.org>
