@@ -1,3 +1,13 @@
+Wed Nov 12 03:28:41 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* load.c (rb_require_safe): destroys barrier after successfully
+	  loaded, to get rid of loading same library again.  [ruby-core:19798]
+
+	* thread.c (rb_barrier_wait): can not wait destroyed barrier.
+
+	* thread.c (rb_barrier_destroy): destroys barrier so that no longer
+	  waited.
+
 Tue Nov 11 23:02:27 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
 
 	* man/ruby.1 (RUBYOPT): wrote which option can appear.
